added images, prepare_images to check and upload missing images, get_triggers API
